# obt

./: .plot.html.swp  README.md  plot.html  plot3d.html
DE/c/: Doxyfile  a.out  jplbin.h  testeph.c
DE/doc/: planets_README.txt
DE/fortran/: makefile  testeph.f  try  try.f90
Montenbruck/: Doxyfile.bak  GEODA.cpp  SAT_DE.cpp  SAT_DE.h  SAT_Filter.cpp  SAT_VecMat.h  makefile  tags  try1.cpp
Montenbruck/Exercise/: Exercise_2_1  Exercise_2_2  Exercise_2_3  Exercise_2_4  Exercise_2_5  Exercise_2_6  Exercise_3_1  Exercise_3_2  Exercise_3_3  Exercise_3_4  Exercise_4_1  (+13 more)
SSM/: .1.lua.swp  .gitignore  .main.c.swp  1.f90  1.lua  CDE430.c  Cgravity.c  Cplot.c  Doxyfile  LCC.c  LCC_gravity.c  LCC_gravityby1.c  LCF.c  LCF_de430.c  LCF_pleph.c  LCF_try.c  LC_de430.c  LC_gravity.c  LC_plot.c  Makefile  Vector.c  Vector.h  a.out  body_0  body_1  bodys.csv  common.c  common.h  jpleph.c  main.c  main.jl  main.lua  main.m  makefile  plot.html  read  read.c  tags  try.f90  trytesteph.f  (+1 more)
data/: .gitignore  bodydata.csv  dxyz.csv  init.csv  initdata.csv  output.csv  outputDE.csv  outputde.csv  plot.csv  plot.html  plot.ipynb  plotoutput.html
de/: other_readers.txt  read  read.f90
de430/: makefile  read  read.f90  readme.txt  testeph.c
de430/luaf/test/: CMakeLists.txt  test.f90
src/: 0.c  1.lua  1.m  LCC.c  LCF.c  LH.lua  bodydata.csv  cmod.c  common.lua  getplanetdata.lua  gravityby1.c  main.lua  makefile  output.csv  plot.html  plot2.html  try.c  try.f90
tmp/: LH.lua  SSM.ipynb  State.h  common.c  main.c  main.f90  main.jl  main.m  main1.moon  main_bak.lua  plot2d.html
(+1531 files in other folders)
